Agregando Expresiones regulares y pep8

--- a/Tema18 - Trabajando con archivos txt en Python.ipynb
+++ b/Tema18 - Trabajando con archivos txt en Python.ipynb
@@ -1323,6 +1323,299 @@
       "source": [
         "Observamos que efectivamente tanto el archivo `csv_write_dict.csv` como `csv_write_dict_writerows.csv` son idénticos."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Expresiones regulares\n",
+        "\n",
+        "* **Expresión regular (regex):** patrón que describe un conjunto de cadenas (ej. `\\d+` = números).\n",
+        "* **Compilación:** `re.compile(pattern)` → mejora rendimiento si el patrón se usa varias veces.\n",
+        "* **Flags:** modificadores de búsqueda (`re.IGNORECASE`, `re.MULTILINE`, `re.DOTALL`)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import re"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Métodos principales de `re`\n",
+        "\n",
+        "### 🔹 `re.match(pattern, string)`\n",
+        "\n",
+        "* Busca un **match solo al inicio** de la cadena. En el caso de tener saltos de línea solo busca en la primera línea.\n",
+        "* Retorna un objeto `Match` o `None`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "m = re.match(r\"\\d+\", \"123abc\")\n",
+        "print(m.group())  # 123\n",
+        "\n",
+        "m = re.match(r\"\\d+\", \"abc123\")\n",
+        "print(m)  # None, porque no empieza con número"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 🔹 `re.search(pattern, string)`\n",
+        "\n",
+        "* Busca el **primer match en cualquier parte** de la cadena. Si tiene saltos de línea busca en las demás líneas.\n",
+        "* Retorna un objeto `Match` o `None`.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "m = re.search(r\"\\d+\", \"abc123xyz\")\n",
+        "print(m.group())  # 123"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 🔹 `re.findall(pattern, string)`\n",
+        "\n",
+        "* Devuelve **todas las coincidencias** en una lista (strings)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(re.findall(r\"\\d+\", \"abc123xyz456\"))  \n",
+        "# ['123', '456']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 🔹 `re.finditer(pattern, string)`\n",
+        "\n",
+        "* Igual que `findall` pero devuelve un iterador de objetos `Match`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for m in re.finditer(r\"\\d+\", \"abc123xyz456\"):\n",
+        "    print(m.group(), \"pos:\", m.start(), \"-\", m.end())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 🔹 `re.split(pattern, string)`\n",
+        "\n",
+        "* Divide la cadena según el patrón (similar a `str.split` pero con regex)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(re.split(r\"\\W+\", \"palabra1 palabra2, palabra3; palabra4\"))\n",
+        "# ['palabra1', 'palabra2', 'palabra3', 'palabra4']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 🔹 `re.sub(pattern, repl, string)`\n",
+        "\n",
+        "* Reemplaza todas las ocurrencias del patrón por `repl`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(re.sub(r\"\\d+\", \"#\", \"User123Data456\"))  \n",
+        "# User#Data#"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 🔹 `re.fullmatch(pattern, string)`\n",
+        "\n",
+        "* Verifica si **toda la cadena** cumple el patrón (no solo parte)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(re.fullmatch(r\"\\d+\", \"12345\"))  # match\n",
+        "print(re.fullmatch(r\"\\d+\", \"123abc\")) # None"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Para conocer más Character clases que podamos usar en expresiones regulares: https://regexr.com/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. El objeto `Match`\n",
+        "\n",
+        "Cuando `match`, `search` o `finditer` encuentran coincidencias, devuelven un objeto `Match`.\n",
+        "Propiedades y métodos importantes:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "m = re.search(r\"(\\d+)\", \"abc123xyz\")\n",
+        "\n",
+        "print(m.group())   # '123' → coincidencia completa\n",
+        "print(m.group(1))  # '123' → primer grupo\n",
+        "print(m.start())   # 3  → índice inicio\n",
+        "print(m.end())     # 6  → índice fin\n",
+        "print(m.span())    # (3,6) → tupla (inicio, fin)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Si hay paréntesis `( )` en el patrón, son **grupos capturados**."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Ejemplos de patrones útiles\n",
+        "\n",
+        "* `\\d` → dígito (0-9).\n",
+        "* `\\w` → carácter alfanumérico o `_`.\n",
+        "* `\\s` → espacio en blanco.\n",
+        "* `.`  → cualquier carácter (excepto salto de línea).\n",
+        "* `+` → una o más repeticiones.\n",
+        "* `*` → cero o más repeticiones.\n",
+        "* `?` → cero o una repetición.\n",
+        "* `{n,m}` → entre `n` y `m` repeticiones.\n",
+        "* `^` → inicio de cadena.\n",
+        "* `$` → fin de cadena.\n",
+        "\n",
+        "Ejemplo:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Validar email simple\n",
+        "patron = r\"^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$\"\n",
+        "email = \"usuario@test.com\"\n",
+        "\n",
+        "if re.match(patron, email):\n",
+        "    print(\"Email válido\")\n",
+        "else:\n",
+        "    print(\"Email inválido\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5. Usando `re.compile` (buena práctica)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "patron = re.compile(r\"\\d+\")\n",
+        "print(patron.findall(\"a1 b22 c333\"))  \n",
+        "# ['1', '22', '333']\n",
+        "\n",
+        "m = patron.search(\"abc123\")\n",
+        "print(m.group())  # 123"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6. Flags comunes\n",
+        "\n",
+        "* `re.IGNORECASE` → ignora mayúsculas/minúsculas.\n",
+        "* `re.MULTILINE` → `^` y `$` funcionan por línea, no solo en toda la cadena.\n",
+        "* `re.DOTALL` → el `.` incluye saltos de línea.\n",
+        "\n",
+        "Ejemplo:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "texto = \"Hola\\nMundo\"\n",
+        "print(re.findall(r\".+\", texto))                # ['Hola', 'Mundo']\n",
+        "print(re.findall(r\".+\", texto, re.DOTALL))     # ['Hola\\nMundo']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Resumen rápido para entrevista o práctica:**\n",
+        "\n",
+        "* `match` = inicio, `search` = en cualquier parte, `fullmatch` = toda cadena.\n",
+        "* `findall` = lista de coincidencias, `finditer` = objetos `Match`.\n",
+        "* `sub` = reemplazo, `split` = separación por regex.\n",
+        "* Usa `re.compile` para reusar patrones.\n",
+        "* Usa flags para modificar comportamiento (`IGNORECASE`, `MULTILINE`, `DOTALL`)."
+      ]
     }
   ],
   "metadata": {
