--- a/Tema12 - Dataframes.ipynb
+++ b/Tema12 - Dataframes.ipynb
@@ -8501,7 +8501,7 @@
    ],
    "source": [
     "# Mostramos aquellas observaciones cuyo porcentaje es mayor a 5\n",
-    "# la columan debe ser una sola palabra o unido por guiones o todas las palabras juntas\n",
+    "# la columna debe ser una sola palabra o unido por guiones o todas las palabras juntas\n",
     "# esto es un poco más facil de leer que lo anterior como con SQL, Aunque hacen lo mismo.\n",
     "letters_freq_df.query('Porcentaje > 5')"
    ]
@@ -8894,13 +8894,6 @@
    "source": [
     "Es mejor manejar los datos en Data Frames que en Series, porque no deja de ser muy similar a una columna de data frame y si tienemos varias Series lo ideal es juntarlas en un solo dataframe. En la mayoria de algoritmos de Machine Learning se usan dataframe y pasar una Serie causa errores."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
