--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL1/5_lineas-y-areas.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL1/5_lineas-y-areas.ipynb
@@ -11,7 +11,10 @@
    "metadata": {},
    "source": [
     "# Gráfico de Linea\n",
-    "Gráfico que presenta valores numéricos conectados por lineas de izquierda a derecha. Tiene un objetivo similar al gráfico de barras. Nos sirve para mostrar diferencias de variables numéricas a través de mi variable en el Eje X. Sin embargo, es más útil cuando queremos mostrar tendencias de subida o de bajada de mi variable numérica. A diferencia del grafico de barras, el Eje X de izquierda a derecha suele representar una unidad de progresión ordenada de menor a mayor (ejemplo: días, años, meses, horas; es decir, usualmente unidades de tiempo). Es decir, Variables categóricas ordinales. A diferencia del gráfico de barras, yo puedo tener muchas categorías o puntos en el Eje X ya que no necesito dibujar barras en cada punto. El gráfico puede tener varias líneas que representan diferentes grupos. En este caso se denomina gráfico multilinea. Y obviamente, cada línea tiene que estar correctamente diferenciada.    \n",
+    "Gráfico que presenta valores numéricos conectados por lineas de izquierda a derecha. Tiene un objetivo similar al gráfico de barras. Nos sirve para mostrar diferencias de variables numéricas a través de mi variable en el Eje X. Sin embargo, es más útil cuando queremos mostrar tendencias de subida o de bajada de mi variable numérica.\n",
+    "\n",
+    "A diferencia del grafico de barras, el Eje X de izquierda a derecha suele representar una unidad de progresión ordenada de menor a mayor (ejemplo: días, años, meses, horas; es decir, usualmente unidades de tiempo). Es decir, Variables categóricas ordinales. A diferencia del gráfico de barras, yo puedo tener muchas categorías o puntos en el Eje X ya que no necesito dibujar barras en cada punto. El gráfico puede tener varias líneas que representan diferentes grupos. En este caso se denomina gráfico multilinea. Y obviamente, cada línea tiene que estar correctamente diferenciada.\n",
+    "    \n",
     "**Eje X**: Variable categórica ordinal     \n",
     "**Eje Y**: Variable numérica     \n",
     "**Otros nombres**: Cuando mi cantidad de valores en el Eje X es muy alta y es una variable temporal, se puede denominar Serie de Tiempo.\n",
@@ -70,18 +73,8 @@
        "        <script type=\"text/javascript\">\n",
        "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
        "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.27.0.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
        "        </script>\n",
+       "        <script type=\"module\">import \"https://cdn.plot.ly/plotly-3.1.0.min\"</script>\n",
        "        "
       ]
      },
@@ -281,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0d62e024",
    "metadata": {
     "scrolled": true
@@ -470,7 +463,7 @@
    ],
    "source": [
     "# Nueva columna con el formato: YYYY-MM\n",
-    "df['fecha'] = df['date'].apply(lambda x: x[:7])\n",
+    "df['fecha'] = df['date'].apply(lambda x: x[:7]) # recortamos el string para obtener el año y mes\n",
     "df"
    ]
   },
@@ -813,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e25fbcf7",
    "metadata": {},
    "outputs": [
@@ -1822,15 +1815,23 @@
     "import plotly.express as px\n",
     "fig = px.line(\n",
     "    por_mes,\n",
-    "    x=por_mes.index.values,\n",
+    "    x=por_mes.index.values, # valores de los meses y año\n",
     "    y='sales'\n",
     ")\n",
     "fig.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a838fa3c",
+   "metadata": {},
+   "source": [
+    "### Agrupación por año"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e3482f81",
    "metadata": {},
    "outputs": [
@@ -2028,13 +2029,13 @@
     }
    ],
    "source": [
-    "df['anio'] = df['date'].apply(lambda x: x[:4])\n",
+    "df['anio'] = df['date'].apply(lambda x: x[:4]) # separamos el año\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "85e318de",
    "metadata": {},
    "outputs": [
@@ -2235,14 +2236,14 @@
     "# Filtro 2015 y las familias de productos que me interesan\n",
     "df_2015 = df[\n",
     "    (df['anio'] == '2015') & \n",
-    "    (df['family'].isin(['SEAFOOD', 'MEATS', 'DAIRY']))\n",
+    "    (df['family'].isin(['SEAFOOD', 'MEATS', 'DAIRY'])) # filtramos por la columna family\n",
     "]\n",
     "df_2015"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c0e422ec",
    "metadata": {},
    "outputs": [
@@ -2484,14 +2485,14 @@
     }
    ],
    "source": [
-    "# Agrupo por mes y por familia\n",
+    "# Agrupo por mes y por familia, en ese orden para tener el total de ventas\n",
     "agrupacion = df_2015[['fecha', 'family', 'sales']].groupby(['fecha', 'family']).sum()\n",
     "agrupacion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b41411e3",
    "metadata": {},
    "outputs": [
@@ -2638,13 +2639,13 @@
    "source": [
     "# Pivoteo la tabla para que mis categorias pasen a ser mis columnas\n",
     "pivote = agrupacion.unstack() \n",
-    "# equivale a: agrupacion.reset_index(1).pivot(columns=['family'])\n",
+    "# equivale a: agrupacion.reset_index(1).pivot(columns=['family']). # colocamos el index y pivotamos\n",
     "pivote"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0bd471f7",
    "metadata": {
     "scrolled": true
@@ -2783,13 +2784,13 @@
    ],
    "source": [
     "# Elimino un nivel en las columnas, no lo necesito\n",
-    "pivote.columns = pivote.columns.droplevel()\n",
+    "pivote.columns = pivote.columns.droplevel() # elimina el nivel 0, el primero\n",
     "pivote"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "73f8b884",
    "metadata": {},
    "outputs": [
@@ -2816,14 +2817,17 @@
    ],
    "source": [
     "# Grafico de lineas de multiples categorias\n",
+    "# esto con pandas\n",
     "pivote.plot.line(\n",
     "    style='.-'\n",
-    ")"
+    ")\n",
+    "\n",
+    "# pero para el vlor de seafood no s epuede ver diferencias en sus valores, parece un línea, sería mejor dividir los datos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "c9ef055c",
    "metadata": {},
    "outputs": [
@@ -2853,7 +2857,7 @@
     "# Grafico de lineas de multiples categorias con Subplots\n",
     "pivote.plot.line(\n",
     "    style='.-',\n",
-    "    subplots=True\n",
+    "    subplots=True # se genera un plot por cada categoria\n",
     ")"
    ]
   },
@@ -2868,7 +2872,8 @@
    "metadata": {},
    "source": [
     "# Gráfico de Area\n",
-    "Combina la utilidad del gráfico de líneas con la del gráfico de barras. Me permite comparar diferencias entre magnitudes y hallar tendencias a lo largo de una progresión continua. Es por esto que en un gráfico de Areas, el Eje Y si tiene que empezar en el \"cero\" (como el gráfico de baras). Básicamente es un gráfico de líneas con el area bajo la curva de un color sólido.   \n",
+    "Combina la utilidad del gráfico de líneas con la del gráfico de barras. Me permite comparar diferencias entre magnitudes y hallar tendencias a lo largo de una progresión continua. Es por esto que en un gráfico de Areas, el Eje Y si tiene que empezar en el \"cero\" (como el gráfico de barras). Básicamente es un gráfico de líneas con el area bajo la curva de un color sólido.\n",
+    "\n",
     "**Eje X**: Variable categórica continua   \n",
     "**Eje Y**: Variable numérica   \n",
     "**Otros nombres**: Area Chart   \n",
@@ -2878,7 +2883,9 @@
     "\n",
     "## Referencias\n",
     "- https://datavizcatalogue.com/ES/metodos/grafica_de_area.html\n",
-    "- https://chartio.com/learn/charts/area-chart-complete-guide/"
+    "- https://chartio.com/learn/charts/area-chart-complete-guide/\n",
+    "\n",
+    "No es tan estético."
    ]
   },
   {
@@ -2917,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "fbc8b64c",
    "metadata": {},
    "outputs": [
@@ -2944,15 +2951,20 @@
    ],
    "source": [
     "# Grafico de area apilado de multiples categorias\n",
+    "# en el pivote, cada categoria es una columna\n",
     "pivote.plot.area(\n",
     "    style='.-',\n",
-    "    stacked=True\n",
-    ")"
+    "    stacked=True # se apilan las categorias.\n",
+    ")\n",
+    "\n",
+    "# inicia pintando los valores del que tiene el valores más alto, luego suma el naranja y finalmente suma el verde\n",
+    "# Se pierde presición al interpretar o leer los valores.\n",
+    "# lo que ganamos el leer las proporciones, donde el azul es el doble que el naranja y verde es muy pequeño"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "82b1d6aa",
    "metadata": {},
    "outputs": [
@@ -2982,17 +2994,9 @@
     "# El Eje Y no se acumula con cada línea\n",
     "pivote.plot.area(\n",
     "    style='.-',\n",
-    "    stacked=False\n",
+    "    stacked=False # Con esto no apilamos una sobre otro, sino pintamos un colo sobre otro con cierta opacida para no tapar valores menores\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c121f96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3005,7 +3009,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3019,7 +3023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
