--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL1/2_pie.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL1/2_pie.ipynb
@@ -18,13 +18,13 @@
     "\n",
     "\n",
     "### Cuando utilizar\n",
-    "- Quiero comparar partes porcentuales de un todo\n",
+    "- Quiero comparar partes porcentuales de un todo. No para otro tipo de magnitudes que se representan mejor en un gráfico de barras.\n",
     "\n",
     "### Cuando no utilizar\n",
     "- Cuando no quiero saber acerca de las proporciones, o cuando no o no puedo calcular valores porcentuales\n",
     "- Si tengo muchas categorias y las quiero mostrar todas el gráfico se vuelve ilegible\n",
-    "- Cuando una categoría representa +95% de los datos se vuelve una visualización sin utilidad\n",
-    "- Las categorías son porcentualmente identicas a simple vista (preferible utilizar bar chart en este caso!)\n",
+    "- Cuando una categoría representa +95% de los datos se vuelve una visualización sin utilidad.\n",
+    "- Las categorías son porcentualmente identicas a simple vista (preferible utilizar bar chart en este caso, para mostrar mejor las pequeñas diferencias!).\n",
     "\n",
     "### Ejemplos de Uso\n",
     "- Si soy dueño de una página web, me gustaría saber cual es la proporcion de usuarios visitan mi página desde un Celular, Tablet o PC de escritorio.\n",
@@ -37,7 +37,7 @@
     "- Evita los pie charts en 3D. Son muy difíciles de leer.\n",
     "- De ser posible, ordena los segmentos de mayor a menor empezando por el centro (90 grados)\n",
     "- Es un gráfico de dificil interpretacion. **A los humanos no se nos da bien comparar ángulos al ojo**. Tengan siempre esto presente.\n",
-    "- Utiliza colores solo cuando sea relevante. Por ejemplo para resaltar una categoria.\n",
+    "- Utiliza colores solo cuando sea relevante. Por ejemplo para resaltar con un color resaltante una categoria.\n",
     "\n",
     "## En esta clase\n",
     "### Datos\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "995a09c2",
    "metadata": {},
    "outputs": [
@@ -63,18 +63,8 @@
        "        <script type=\"text/javascript\">\n",
        "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
        "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.20.0.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
        "        </script>\n",
+       "        <script type=\"module\">import \"https://cdn.plot.ly/plotly-3.1.0.min\"</script>\n",
        "        "
       ]
      },
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "89fc256f",
    "metadata": {
     "scrolled": true
@@ -349,7 +339,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "dd341da9",
    "metadata": {},
    "outputs": [
@@ -459,19 +449,85 @@
        "male      107       577  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# agrupamos por la columna Sex y contamos la cantidad de registros para cada genero.\n",
     "pasajeros = df.groupby('Sex').count()\n",
     "pasajeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "id": "ae6ccdad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>577</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PassengerId\n",
+       "Sex                \n",
+       "female          314\n",
+       "male            577"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Sex').agg({\n",
+    "    'PassengerId': 'count'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f3f68d56",
    "metadata": {},
    "outputs": [
@@ -501,16 +557,113 @@
     "# https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.plot.pie.html\n",
     "# https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.pie.html#matplotlib.axes.Axes.pie\n",
     "pasajeros.plot.pie(\n",
-    "    y='PassengerId', \n",
-    "    startangle=90,\n",
-    "    autopct='%1.2f%%'\n",
+    "    y='PassengerId',  # los valores salen de la cantidad\n",
+    "    startangle=90, # empieza la gráfica desde el angulo de 90 grados, sigue en sentido horario\n",
+    "    autopct='%1.2f%%' # coloca el número en porcentaje dentro de las secciones del circulo.\n",
     ")\n",
     "plt.title('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "2e4697b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>314</td>\n",
+       "      <td>314</td>\n",
+       "      <td>314</td>\n",
+       "      <td>314</td>\n",
+       "      <td>261</td>\n",
+       "      <td>314</td>\n",
+       "      <td>314</td>\n",
+       "      <td>314</td>\n",
+       "      <td>314</td>\n",
+       "      <td>97</td>\n",
+       "      <td>312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male</td>\n",
+       "      <td>577</td>\n",
+       "      <td>577</td>\n",
+       "      <td>577</td>\n",
+       "      <td>577</td>\n",
+       "      <td>453</td>\n",
+       "      <td>577</td>\n",
+       "      <td>577</td>\n",
+       "      <td>577</td>\n",
+       "      <td>577</td>\n",
+       "      <td>107</td>\n",
+       "      <td>577</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Sex  PassengerId  Survived  Pclass  Name  Age  SibSp  Parch  Ticket  \\\n",
+       "0  female          314       314     314   314  261    314    314     314   \n",
+       "1    male          577       577     577   577  453    577    577     577   \n",
+       "\n",
+       "   Fare  Cabin  Embarked  \n",
+       "0   314     97       312  \n",
+       "1   577    107       577  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# para Plotly debemos quitar el indice de Sex para que este pase a ser una columna.\n",
+    "pasajeros2 = pasajeros.reset_index()\n",
+    "pasajeros2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "34e1f56c",
    "metadata": {},
    "outputs": [
@@ -1407,21 +1560,22 @@
    ],
    "source": [
     "# Grafico de Pie / Dona con Plotly\n",
+    "# es interactivo\n",
     "# https://plotly.com/python/pie-charts/\n",
     "pasajeros2 = pasajeros.reset_index()\n",
     "fig = px.pie(\n",
-    "    pasajeros2, \n",
-    "    names='Sex', \n",
-    "    values='PassengerId', \n",
+    "    pasajeros2, # colocamos \n",
+    "    names='Sex', # usa la columna Sex como eje X\n",
+    "    values='PassengerId', # valores representan el eje Y\n",
     "    title='Proporcion de pasajeros del Titanic por sexo',\n",
-    "    hole=0.5\n",
+    "    hole=0.5 # genera un huevo en el grafico para hacerlo en forma de dona, valores del 0 al 1\n",
     ")\n",
     "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e3482f81",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1655,7 @@
     "ejemplo1.plot.pie( # Agarra el indice como etiquetas por defecto\n",
     "    y='Numero De Cuentas', \n",
     "    startangle=90,\n",
-    "    autopct='%1.1f%%',\n",
+    "    autopct='%1.1f%%', # formato de valores que aparecen en el grafico\n",
     "    colormap='Pastel1' # Colores diferentes\n",
     ")\n",
     "ejemplo1"
@@ -1526,7 +1680,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1540,7 +1694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
