--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL1/3_cajas-y-violines.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL1/3_cajas-y-violines.ipynb
@@ -21,8 +21,17 @@
     "\n",
     "![image-3.png](attachment:image-3.png)\n",
     "\n",
+    "\n",
+    "Vemos como se calcula la longitud de los bigotes.\n",
+    "\n",
     "![image-2.png](attachment:image-2.png)\n",
     "\n",
+    "\n",
+    "Vemos una explicación más detallada.\n",
+    "\n",
+    "<img src='https://numiqo.es/assets/tutorial/Interpretaci%C3%B3n_de_gr%C3%A1ficos_de_caja.png'/>\n",
+    "\n",
+    "<!-- [https://numiqo.es/assets/tutorial/Interpretaci%C3%B3n_de_gr%C3%A1ficos_de_caja.png](https://numiqo.es/assets/tutorial/Interpretaci%C3%B3n_de_gr%C3%A1ficos_de_caja.png) -->\n",
     "\n",
     "### Cuando utilizar\n",
     "- Comparar grupos a través de sus estadísticos (media, mediana y cuartiles)\n",
@@ -36,7 +45,7 @@
     "- Cajas verticales o horizontales? No hay preferencia. Puede depender de cuantas categorías quiero mostrar o del tamaño de mis etiquetas categóricas\n",
     "\n",
     "### Ejemplos de Uso\n",
-    "- Si soy dueño de una página web, me gustaría saber cual es la diferencia del tiempo en que las personas visitan mi página desde un Celular, Tablet o PC de escritorio.\n",
+    "- Si soy dueño de una página web, me gustaría saber cual es la diferencia del tiempo en que las personas visitan mi página desde un Celular, Tablet o PC de escritorio. Tendría un grafico con tres cajas con los estadisticos de cada categoría.\n",
     "- En un banco, me interesaría saber cuanto dinero almacenan diferentes tipos de cuentas bancarias\n",
     "\n",
     "## En esta clase\n",
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "366799c8",
    "metadata": {},
    "outputs": [
@@ -592,13 +601,15 @@
    ],
    "source": [
     "# Eliminar datos vacios\n",
+    "# subset indica el arreglo de columnas donde se buscará\n",
+    "# index indica que elimina la fila donde encuentre un valor NaN\n",
     "df = df.dropna(subset=['Age'], axis='index')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6050fd6a",
    "metadata": {},
    "outputs": [
@@ -628,14 +639,16 @@
     "# https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.boxplot.html\n",
     "# https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.boxplot.html#matplotlib.pyplot.boxplot\n",
     "df.boxplot(\n",
-    "    column='Age', \n",
-    "    by='Sex'\n",
-    ")"
+    "    column='Age', # valores númericos, columna Y\n",
+    "    by='Sex' # categorias, columna X, sin esta variable solo genera una caja\n",
+    ")\n",
+    "# los hombre son un poco mayores que las mujeres, por que la caja esta un poco más arriba, a parte de tener valores atipicos\n",
+    "# pero para comprobarlo como tal se necesitan otros calculos, pero esto nos puede dar una idea."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f3f68d56",
    "metadata": {},
    "outputs": [
@@ -664,7 +677,7 @@
     "# Grafico de Cajas con Seaborn\n",
     "# https://seaborn.pydata.org/generated/seaborn.boxplot.html\n",
     "sns.boxplot(\n",
-    "    df, \n",
+    "    df, # pasamos el dataframe\n",
     "    x='Sex', \n",
     "    y='Age'\n",
     ").set(title='Numero de Pasajeros por Sexo')"
@@ -684,17 +697,29 @@
    "metadata": {},
    "source": [
     "# Gráfico de Violines\n",
-    "Los Graficos de Cajas no nos dicen nada acerca de la forma de la distribución de los datos. Solamente de los estadísticos de la distribución. Esto hace que puedan ser engañosos (ver imagen). Por esto un excelente acompañante o remplazo de los gráficos de cajas, es el gráfico de violines. Nos permite ver como estan distribuidos los datos manteniendo todas las ventajas de un diagrama de cajas. La única desventaja es que puede ser mas complejo de entender para una persona inexperta que el diagrama de cajas.\n",
+    "Los Graficos de Cajas no nos dicen nada acerca de la forma de la distribución de los datos. Solamente de los estadísticos de la distribución. Esto hace que puedan ser engañosos (ver imagen). Por esto un excelente acompañante o remplazo de los gráficos de cajas, es el gráfico de violines. Nos permite ver como estan distribuidos los datos manteniendo todas las ventajas de un diagrama de cajas. La única desventaja es que puede ser mas complejo de entender para una persona inexperta que el diagrama de cajas. (un diagrama de violines tiene dentro un diagrama de cajas)\n",
     "\n",
     "![image-3.png](attachment:image-3.png)\n",
+    "\n",
+    "\n",
     "vs\n",
+    "\n",
+    "Los gráficos de violines tine un curva que permite ver la distribución de los datos. Con cada curva más abierta se da a entender que hay más datos concentrados.\n",
+    "\n",
     "![image-2.png](attachment:image-2.png)\n",
     "\n",
+    "\n",
+    "Partes del gráfico.\n",
+    "\n",
+    "<img src='https://vanessa-mae.com.ar/wp-content/uploads/what-is-a-violin-plot-for-univariate-analysis.webp' width='500px'/>\n",
+    "\n",
+    "Animación de funcionamiento de gráfico:\n",
+    "\n",
+    "<img src='https://media.licdn.com/dms/image/v2/C4E22AQEtdld7POtB6A/feedshare-shrink_800/feedshare-shrink_800/0/1652083324708?e=2147483647&v=beta&t=IWjrY2_MNg82-Q_CVq-zm52AKEIh6OUMAq00eoXOuUY'>\n",
     "\n",
     "**Eje X**: Variable categórica   \n",
     "**Eje Y**: Variable numérica   \n",
     "**Otros nombres**: Violin Plot   \n",
-    "\n",
     "\n",
     "### Cuando utilizar\n",
     "- Quiero comparar grupos a través de sus estadísticos (media, mediana y percentiles) y sus distribuciones al mismo tiempo\n",
@@ -710,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "312aaf80",
    "metadata": {},
    "outputs": [
@@ -737,13 +762,14 @@
    ],
    "source": [
     "# Violin Plot con Seaborn\n",
+    "# al momento del curso, solo se pueden hacer gráficos de violines con Searborn\n",
     "# https://seaborn.pydata.org/generated/seaborn.violinplot.html\n",
     "sns.violinplot(df, x='Sex', y='Age').set(title='Numero de Pasajeros por Sexo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8e5168c9",
    "metadata": {},
    "outputs": [
@@ -773,7 +799,7 @@
     "    df, \n",
     "    x='Sex', \n",
     "    y='Age', \n",
-    "    inner='quartiles' # point, stick\n",
+    "    inner='quartiles' # Se dibujan los cuartiles. point, stick son otros valores que puede aceptar\n",
     ").set(title='Numero de Pasajeros por Sexo')"
    ]
   },
@@ -796,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -810,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
