--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL1/4_histograma.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL1/4_histograma.ipynb
@@ -11,10 +11,12 @@
    "metadata": {},
    "source": [
     "# Histograma\n",
-    "Muestra la distribución de una variable numérica como un conjunto de barras. Los datos numéricos se agrupan en \"bins\" (clases o grupos) segun un rango de valores. Cada \"bin\" va a tener una barra. La altura de la barra representa cuantos puntos de datos existen dentro del rango del \"bin\". Usualmente es el primer gráfico a realizar de todas las columnas numéricas de mi dataset ya que me dice como se distribuyen mis datos. Esto, por ejemplo, me permite escoger pruebas estadísticas correctas que asumen cierta distribución. *Este es el primer gráfico que analizamos en esta parte práctica que nos permitirá ver la forma de una distribución.*  \n",
-    "**Eje X**: Rangos o Bins de la variable numérica    \n",
-    "**Eje Y**: Frecuencia absoluta o relativa de cada \"bin\"   \n",
-    "**Otros nombres**: Histogram     \n",
+    "Muestra la distribución de una variable numérica como un conjunto de barras. Los datos numéricos se agrupan en \"bins\" (clases o grupos) segun un rango de valores. Cada \"bin\" va a tener una barra. La altura de la barra representa cuantos puntos de datos existen dentro del rango del \"bin\". \n",
+    "\n",
+    "Usualmente es el primer gráfico a realizar de todas las columnas numéricas de mi dataset ya que me dice como se distribuyen mis datos. Esto, por ejemplo, me permite escoger pruebas estadísticas correctas que asumen cierta distribución. *Este es el primer gráfico que analizamos en esta parte práctica que nos permitirá ver la forma de una distribución.*  \n",
+    "**Eje X**: Rangos o Bins de la variable numérica.\n",
+    "**Eje Y**: Frecuencia absoluta o relativa (cantidad) de cada \"bin\".\n",
+    "**Otros nombres**: Histogram.\n",
     "\n",
     "![image-3.png](attachment:image-3.png)\n",
     "\n",
@@ -24,11 +26,11 @@
     "- Quiero observar la forma de la distribución de mis datos (ejemplo: normal, sesgada, uniforme, bimodal, multimodal)\n",
     "\n",
     "### Consejos\n",
-    "- Siempre la base del Eje Y tiene que ser el cero.\n",
+    "- Siempre la base del Eje Y tiene que ser el cero, es decir, el eje X debe iniciar con el 0.\n",
     "- Elegimos un número de \"bins\" que me permita observar la verdadera distribución. Elegir un número muy pequeño de bins puede darme resultados engañosos.\n",
     "- El rango de cada uno de los \"bins\" tiene que ser exactamente el mismo. Es decir si el primer bin va a contener la frecuencia de los valores de entre 5 a 10, el segundo bin tiene que ser de 10 a 15, el siguiente de 15 a 20, y así sucesivamente hasta cubrir todo mi rango de valores numéricos posibles de la variable analizada. \n",
     "- Barras verticales o horizontales? No hay preferencia. Usualmente verticales.\n",
-    "- Recuerda que no tiene sentido hallar distribuciones de variables categóricas. Para esto utiliza un simple diagrama de barras que cuente cuantos puntos caen en cada categoría.\n",
+    "- Recuerda que no tiene sentido hallar distribuciones de variables categóricas (strings). Para esto utiliza un simple diagrama de barras que cuente cuantos puntos caen en cada categoría.\n",
     "\n",
     "\n",
     "## En esta clase\n",
@@ -594,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2909784f",
    "metadata": {},
    "outputs": [
@@ -627,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6050fd6a",
    "metadata": {},
    "outputs": [
@@ -658,13 +660,13 @@
     "# https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist\n",
     "df.hist(\n",
     "    'Age',\n",
-    "    bins=10\n",
+    "    bins=10 # hace 10 agrupaciones\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9dacce7e",
    "metadata": {},
    "outputs": [
@@ -696,8 +698,8 @@
     "# https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist\n",
     "df.hist(\n",
     "    'Age',\n",
-    "    by='Sex',\n",
-    "    figsize=(10, 5)\n",
+    "    by='Sex', # generamos histogramas por Sexo\n",
+    "    figsize=(10, 5) # Tamaño de la figura\n",
     ")"
    ]
   },
@@ -737,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9f4c7615",
    "metadata": {},
    "outputs": [
@@ -768,7 +770,7 @@
     "sns.histplot(\n",
     "    data=df,\n",
     "    x='Age',\n",
-    "    kde=True,\n",
+    "    kde=True, # agrega la curva\n",
     "#     bins=5\n",
     "#     element=\"step\",  # Representacion visual de las \"barras\"\n",
     "#     stat='probability',  \n",
@@ -873,7 +875,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -887,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
