--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL6/1_wordcloud.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL6/1_wordcloud.ipynb
@@ -228,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "003cd093",
    "metadata": {},
    "outputs": [],
    "source": [
-    "texto = ' '.join(df['tokenized'])"
+    "texto = ' '.join(df['tokenized']) # unimos todos los textos de esta columan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a19edb05",
    "metadata": {
     "scrolled": true
@@ -273,14 +273,14 @@
     "    height=700,\n",
     "    margin=0,\n",
     "    background_color='black' # white\n",
-    ").generate(texto)\n",
+    ").generate(texto) # el texto es el dataframe\n",
     "plt.imshow(wc, interpolation='bilinear')\n",
     "plt.axis('off')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e9d1cb5f",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
     }
    ],
    "source": [
-    "%pip install pillow"
+    "%pip install pillow # permite generar la nube de palabras con formas"
    ]
   },
   {
@@ -310,19 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "02d45715",
    "metadata": {},
    "outputs": [],
    "source": [
     "tw_color = np.array(Image.open('../data/twitter.jpeg'))\n",
     "tw_mask = tw_color.copy()\n",
-    "tw_mask[tw_mask.sum(axis=2) == 0] = 255"
+    "tw_mask[tw_mask.sum(axis=2) == 0] = 255 # quitamos el fondo negro de la imagen\n",
+    "# con esto ya tenemos la forma del logo de twitter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3a5aaa3a",
    "metadata": {},
    "outputs": [
@@ -350,14 +351,15 @@
    "source": [
     "wc = WordCloud(\n",
     "    margin=0,\n",
-    "    mask=tw_mask\n",
+    "    mask=tw_mask # colocamos la forma de la imagen\n",
     ").generate(texto)\n",
     "\n",
+    "# colocamos el color de la imagen a las letras\n",
     "image_colors = ImageColorGenerator(tw_color)\n",
     "wc.recolor(color_func=image_colors)\n",
     "\n",
     "plt.imshow(wc, interpolation='bilinear')\n",
-    "plt.axis('off')\n",
+    "plt.axis('off') # quita los ejes\n",
     "plt.show()\n",
     "wc.to_file(\"./wc_tw.png\")"
    ]
