--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL6/2_venn.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL6/2_venn.ipynb
@@ -18,17 +18,20 @@
     "\n",
     "![image-12.png](attachment:image-12.png)\n",
     "\n",
-    "\n",
     "### Cuando utilizar\n",
+    "\n",
     "- Quiero una forma visual de representar cuantas observaciones pertenecen al mismo tiempo a dos grupos diferentes. \n",
     "\n",
     "\n",
     "### Consejos\n",
+    "\n",
     "- Si tengo más de 3 conjuntos el gráfico se vuelve complicado de entender (ver imagen)\n",
     "- No es común utilizarlo en presentaciones, ni en exploración de datos.  \n",
+    "\n",
     "![image-14.png](attachment:image-14.png)\n",
     "\n",
     "## Referencias\n",
+    "\n",
     "- https://datavizcatalogue.com/ES/metodos/diagrama_de_venn.html"
    ]
   },
@@ -77,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2202f658",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib_venn import venn2, venn2_unweighted\n",
+    "from matplotlib_venn import venn2, venn2_unweighted # importamos diagrama de ven de 2 conjuntos y otro sin tamaño en los circulos\n",
     "from matplotlib_venn import venn3, venn3_unweighted\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -257,19 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1d521dab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "respira = set(df[df['respira'] == 1]['animal'])\n",
-    "piernas = set(df[df['piernas'] == 1]['animal'])\n",
-    "nada = set(df[df['nada'] == 1]['animal'])"
+    "respira = set(df[df['respira'] == 1]['animal']) # animales que respiran\n",
+    "piernas = set(df[df['piernas'] == 1]['animal']) # animales que tienen piernas\n",
+    "nada = set(df[df['nada'] == 1]['animal']) # animales que nadan\n",
+    "\n",
+    "# de todos se coje al columna animal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a19edb05",
    "metadata": {},
    "outputs": [
@@ -298,19 +303,19 @@
     "# https://github.com/konstantint/matplotlib-venn\n",
     "# https://towardsdatascience.com/how-to-create-and-customize-venn-diagrams-in-python-263555527305\n",
     "venn3(\n",
-    "    [\n",
+    "    [ # conjuntos\n",
     "        set(respira),\n",
     "        set(piernas),\n",
     "        set(nada)\n",
     "    ],\n",
-    "    set_labels = ('Respira Aire', 'Tiene Piernas', 'Puede Nadar')\n",
+    "    set_labels = ('Respira Aire', 'Tiene Piernas', 'Puede Nadar') # nombre de los conjuntos\n",
     ")\n",
     "plt.title('Animales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d42c3b27",
    "metadata": {},
    "outputs": [
@@ -336,7 +341,7 @@
     }
    ],
    "source": [
-    "venn3_unweighted(\n",
+    "venn3_unweighted( # no toma en consideración los pesos para el tamaño de los circulos\n",
     "    [\n",
     "        set(respira),\n",
     "        set(piernas),\n",
