--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL6/3_stream.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL6/3_stream.ipynb
@@ -14,9 +14,10 @@
    "metadata": {},
    "source": [
     "# Stream Graph\n",
-    "Es una variación del gráfico de áreas apiladas. El Stream Graph representa la variacion de magnitud de una variable en diferentes grupos a lo largo del tiempo. Tiene exactamente el mismo objetivo que el gráfico de áreas apiladas. Sin embargo, el Eje Y no es fijo. Es decir, no hay un \"cero\". Por lo que su objetivo no es demostrar presición, si no cambios de proporcionalidad entre grupos. Incluso, es normal suavizar la línea que une los puntos para que se vea mas agradable a la vista.    \n",
-    "**Eje X**: Variable categórica ordinal     \n",
-    "**Eje Y**: Variable numérica     \n",
+    "Es una variación del gráfico de áreas apiladas. El Stream Graph representa la variacion de magnitud de una variable en diferentes grupos a lo largo del tiempo. Tiene exactamente el mismo objetivo que el gráfico de áreas apiladas. Sin embargo, el Eje Y no es fijo. Es decir, no hay un \"cero\". Por lo que su objetivo no es demostrar presición, si no cambios de proporcionalidad entre grupos. Incluso, es normal suavizar la línea que une los puntos para que se vea mas agradable a la vista.\n",
+    "\n",
+    "**Eje X**: Variable categórica ordinal\n",
+    "**Eje Y**: Variable numérica. No es fijo, no tiene un cero como punto de inicio, sino proporcioanlidades entre grupos.\n",
     "**Otros nombres**: Gráfico de Flujo\n",
     "\n",
     "![image-18.png](attachment:image-18.png)\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2202f658",
    "metadata": {},
    "outputs": [],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b419c19d",
    "metadata": {
     "scrolled": false
@@ -462,19 +463,20 @@
        "[251582 rows x 67 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# buscamos visualizar como ha cambiado la proporcion de casos nuevo de covid en el tiempo en cada contienente\n",
     "df = pd.read_csv('../data/covid_data.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1d521dab",
    "metadata": {},
    "outputs": [
@@ -639,22 +641,23 @@
        "[1116 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# agrupamos por fecha y contienente\n",
     "agrupado = df[['date', 'continent', 'new_cases']].groupby(['date', 'continent']).sum()\n",
-    "agrupado = agrupado.unstack(1)\n",
+    "agrupado = agrupado.unstack(1) # los continentes pasan a ser columnas\n",
     "agrupado = agrupado.fillna(0)\n",
     "agrupado = agrupado.droplevel(0, axis=1)\n",
-    "agrupado"
+    "agrupado # tenemos la cantidad de casos por dia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7c7a94fc",
    "metadata": {},
    "outputs": [
@@ -674,6 +677,7 @@
     "# https://matplotlib.org/stable/gallery/lines_bars_and_markers/stackplot_demo.html\n",
     "\n",
     "values = [\n",
+    "    # colocamos los valores de cada columna\n",
     "    agrupado['Africa'],\n",
     "    agrupado['Asia'],\n",
     "    agrupado['Europe'],\n",
@@ -683,21 +687,22 @@
     "]\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.stackplot(\n",
-    "    agrupado.index.values, \n",
-    "    values, \n",
-    "    labels=agrupado.columns.values, \n",
-    "    baseline='wiggle',\n",
+    "ax.stackplot( # para areas apiladas\n",
+    "    agrupado.index.values, # eje X, el tiempo\n",
+    "    values, # eje Y, los grupos de contienentes\n",
+    "    labels=agrupado.columns.values, # labels de la leyenda y colores del gráfico\n",
+    "    baseline='wiggle', # El eje Y deja de ser fijo y los demás puntos se muevan según su valor y el tiempo\n",
     "    alpha=0.8\n",
     ")\n",
+    "# personalizamos \n",
     "ax.legend(loc='upper left')\n",
     "ax.set_title('Casos de Covid por Continente')\n",
     "ax.set_xlabel('Día')\n",
     "ax.set_ylabel('Número de Casos')\n",
-    "ax.axhline(0, color=\"black\", ls=\"--\", linewidth=0.5)\n",
+    "ax.axhline(0, color=\"black\", ls=\"--\", linewidth=0.5) # linea en el cero, para resaltarlo\n",
     "fig.autofmt_xdate()\n",
     "fig.tight_layout()\n",
-    "plt.xticks(np.arange(0, len(agrupado.index.values), 30))\n",
+    "plt.xticks(np.arange(0, len(agrupado.index.values), 30)) # valores que se muestran en eje X, saltamos 30 posiciones para no mostrar todas las fechas\n",
     "plt.show()"
    ]
   },
@@ -772,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -786,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
