--- a/Curso deVisualizaciones y Análisis de Datos/NIVEL6/5_serie_tiempo.ipynb
+++ b/Curso deVisualizaciones y Análisis de Datos/NIVEL6/5_serie_tiempo.ipynb
@@ -83,18 +83,8 @@
        "        <script type=\"text/javascript\">\n",
        "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
        "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.20.0.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
        "        </script>\n",
+       "        <script type=\"module\">import \"https://cdn.plot.ly/plotly-3.1.0.min\"</script>\n",
        "        "
       ]
      },
@@ -441,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8998788b",
    "metadata": {},
    "outputs": [
@@ -3786,12 +3776,21 @@
     "    y=\"sales\", \n",
     "    title='Ventas por dia'\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "# tenemos las ventas por dia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d669f778",
+   "metadata": {},
+   "source": [
+    "## Segundo ejemplo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "82b1d6aa",
    "metadata": {},
    "outputs": [
@@ -4223,13 +4222,14 @@
     }
    ],
    "source": [
+    "# ahora calculamos la cantidad de tweets por dia\n",
     "df2 = pd.read_csv('../data/marcas_mensajes_twitter.csv')\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f902526c",
    "metadata": {},
    "outputs": [
@@ -4674,13 +4674,14 @@
     }
    ],
    "source": [
+    "# formatea las fechas, que parece de texto pero esto ya lo entiende pandas\n",
     "df2['fecha_parseada'] = pd.to_datetime(df2['created_at'], format='%a %b %d %H:%M:%S %z %Y')\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ab2dbca9",
    "metadata": {},
    "outputs": [
@@ -5125,6 +5126,7 @@
     }
    ],
    "source": [
+    "# cambiamos otra vez el formato\n",
     "df2 = df2.sort_values('fecha_parseada')\n",
     "df2['periodo'] = df2['fecha_parseada'].apply(lambda x: x.strftime('%Y-%m-%d'))\n",
     "df2"
@@ -5252,7 +5254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5148c625",
    "metadata": {
     "scrolled": true
@@ -6468,7 +6470,8 @@
     "    y=\"idx\", \n",
     "    title='Mensajes por dia'\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "# con Plotly tenemos interactividad"
    ]
   },
   {
@@ -6490,7 +6493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6504,7 +6507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
