--- a/apache-spark/1-introduccion/instalacion.ipynb
+++ b/apache-spark/1-introduccion/instalacion.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7fc564bc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
      ]
     }
    ],
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "afdb3a58",
    "metadata": {},
    "outputs": [
@@ -30,10 +32,123 @@
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Exception:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 438, in _error_catcher\n",
+      "    yield\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 561, in read\n",
+      "    data = self._fp_read(amt) if not fp_closed else b\"\"\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 527, in _fp_read\n",
+      "    return self._fp.read(amt) if amt is not None else self._fp.read()\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\cachecontrol\\filewrapper.py\", line 98, in read\n",
+      "    data: bytes = self.__fp.read(amt)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\http\\client.py\", line 473, in read\n",
+      "    s = self.fp.read(amt)\n",
+      "        ^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\socket.py\", line 706, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\ssl.py\", line 1314, in recv_into\n",
+      "    return self.read(nbytes, buffer)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\ssl.py\", line 1166, in read\n",
+      "    return self._sslobj.read(len, buffer)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "ssl.SSLError: [SSL: DECRYPTION_FAILED_OR_BAD_RECORD_MAC] decryption failed or bad record mac (_ssl.c:2580)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\cli\\base_command.py\", line 180, in exc_logging_wrapper\n",
+      "    status = run_func(*args)\n",
+      "             ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\cli\\req_command.py\", line 245, in wrapper\n",
+      "    return func(self, options, args)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\commands\\install.py\", line 377, in run\n",
+      "    requirement_set = resolver.resolve(\n",
+      "                      ^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\resolver.py\", line 95, in resolve\n",
+      "    result = self._result = resolver.resolve(\n",
+      "                            ^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers.py\", line 546, in resolve\n",
+      "    state = resolution.resolve(requirements, max_rounds=max_rounds)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers.py\", line 397, in resolve\n",
+      "    self._add_to_criteria(self.state.criteria, r, parent=None)\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers.py\", line 173, in _add_to_criteria\n",
+      "    if not criterion.candidates:\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\resolvelib\\structs.py\", line 156, in __bool__\n",
+      "    return bool(self._sequence)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\found_candidates.py\", line 155, in __bool__\n",
+      "    return any(self)\n",
+      "           ^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\found_candidates.py\", line 143, in <genexpr>\n",
+      "    return (c for c in iterator if id(c) not in self._incompatible_ids)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\found_candidates.py\", line 47, in _iter_built\n",
+      "    candidate = func()\n",
+      "                ^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\factory.py\", line 182, in _make_candidate_from_link\n",
+      "    base: Optional[BaseCandidate] = self._make_base_candidate_from_link(\n",
+      "                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\factory.py\", line 228, in _make_base_candidate_from_link\n",
+      "    self._link_candidate_cache[link] = LinkCandidate(\n",
+      "                                       ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 290, in __init__\n",
+      "    super().__init__(\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 156, in __init__\n",
+      "    self.dist = self._prepare()\n",
+      "                ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 222, in _prepare\n",
+      "    dist = self._prepare_distribution()\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 301, in _prepare_distribution\n",
+      "    return preparer.prepare_linked_requirement(self._ireq, parallel_builds=True)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 525, in prepare_linked_requirement\n",
+      "    return self._prepare_linked_requirement(req, parallel_builds)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 596, in _prepare_linked_requirement\n",
+      "    local_file = unpack_url(\n",
+      "                 ^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 168, in unpack_url\n",
+      "    file = get_http_url(\n",
+      "           ^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 109, in get_http_url\n",
+      "    from_path, content_type = download(link, temp_dir.path)\n",
+      "                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\network\\download.py\", line 147, in __call__\n",
+      "    for chunk in chunks:\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_internal\\network\\utils.py\", line 63, in response_chunks\n",
+      "    for chunk in response.raw.stream(\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 622, in stream\n",
+      "    data = self.read(amt=amt, decode_content=decode_content)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 560, in read\n",
+      "    with self._error_catcher():\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\contextlib.py\", line 158, in __exit__\n",
+      "    self.gen.throw(typ, value, traceback)\n",
+      "  File \"c:\\Users\\favio\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 449, in _error_catcher\n",
+      "    raise SSLError(e)\n",
+      "pip._vendor.urllib3.exceptions.SSLError: [SSL: DECRYPTION_FAILED_OR_BAD_RECORD_MAC] decryption failed or bad record mac (_ssl.c:2580)\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
     }
    ],
    "source": [
-    "%pip install -q pyspark"
+    "%pip install -q pyspark==3.5.7"
    ]
   },
   {
@@ -84,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
