--- a/apache-spark/3-intro-rdd-spark/1-SparkSession.ipynb
+++ b/apache-spark/3-intro-rdd-spark/1-SparkSession.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0edc8b3",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://Favio:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://Favio:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -32,7 +32,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x27aa361ee40>"
+       "<pyspark.sql.session.SparkSession at 0x21941302e40>"
       ]
      },
      "execution_count": 1,
